alteracoes na folha de estilos

--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="fundo-imagem">
-    
+    <div>
+        <p class="texto">
+
+        </p>
+    </div>
 </body>
 </html>
