--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body class="fundo-imagem">
-	<div>
+	<div class="fotoHome">
 		<figure>
 			<img src="img/capa.png" alt="Modelo Anna Bella">
 		</figure>
-	</div>
-	<div>
+	
+	<span class="barraDeNavegacao">
 		<NAv>
 		<UL>
 			<li><a href="Bibliografia.html"></a>Bibliografia | </li>
@@ -21,10 +21,10 @@
 			<li><a href="Contato.html"></a>Contato | </li>
 		</UL>
 		</NAv>
-	</div>
+	</span>
 	<hr>
-	<div>
-		<p class="texto">
+	<div class="texto">
+		<p">
 			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium laboriosam quis inventore omnis fugit est, modi asperiores delectus <br> porro. Officia tempore provident soluta quasi asperiores rem, ipsam repellat. Sed, maiores?
 			<br>
 			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui voluptatem eligendi, ea debitis sed quis sint amet, quod facilis earum aperiam <br> exercitationem soluta temporibus quae, molestias officia suscipit. Error, iusto?<br>
