adicionado fotos na styleshets

--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="fundo-imagem">
+    
     <div>
-        <p class="texto">
-
-        </p>
+        <img class="fotosBiblio" src="img/foto1.png" alt="isso é uma foto">
+    </div>
+    <div>
+        <img class="fotosBiblio" src="img/foto2.png" alt="">
     </div>
 </body>
 </html>
