--- a/index.html
+++ b/index.html
@@ -7,30 +7,31 @@
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-<body class="fundo-imagem">
-	<div class="fotoHome">
-		<figure>
-			<img src="img/capa.png" alt="Modelo Anna Bella">
-		</figure>
-	
-	<span class="barraDeNavegacao">
-		<NAv>
-		<UL>
-			<li><a href="Bibliografia.html"></a>Bibliografia | </li>
-			<li><a href="Campanhas-Publicitarias.html"></a>Campanhas Publicitarias | </li>
-			<li><a href="Contato.html"></a>Contato | </li>
-		</UL>
-		</NAv>
-	</span>
-	<hr>
-	<div class="texto">
-		<p">
-			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium laboriosam quis inventore omnis fugit est, modi asperiores delectus <br> porro. Officia tempore provident soluta quasi asperiores rem, ipsam repellat. Sed, maiores?
-			<br>
-			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui voluptatem eligendi, ea debitis sed quis sint amet, quod facilis earum aperiam <br> exercitationem soluta temporibus quae, molestias officia suscipit. Error, iusto?<br>
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum repudiandae numquam odit tempore harum reprehenderit esse neque!<br> Amet provident similique dolorum esse. Sunt fugit eaque, saepe voluptatibus neque iusto asperiores! <br>
-			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum suscipit sapiente rem asperiores, molestias ab sunt mollitia accusamus magnam voluptatum dicta dolores quo alias nostrum praesentium beatae, ut molestiae. 
-		</p>
+<body>
+	<div class="principal">
+		<div class="fotoHome">
+			<figure>
+				<img src="img/capa.png" alt="Modelo Anna Bella">
+			</figure>
+		</div>
+			<div class="barraDeNavegacao">
+				<NAv>
+					<UL>
+					<li><a href="Bibliografia.html"></a>Bibliografia |</li>
+					<li><a href="Campanhas-Publicitarias.html"></a>Campanhas Publicitarias | </li>
+					<li><a href="Contato.html"></a>Contato | </li>
+					</UL>
+				</NAv>
+			</div>
+		<hr>
+		<div class="texto">
+			<p">
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium laboriosam quis inventore omnis fugit est, modi asperiores delectus <br> porro. Officia tempore provident soluta quasi asperiores rem, ipsam repellat. Sed, maiores?
+				<br>
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui voluptatem eligendi, ea debitis sed quis sint amet, quod facilis earum aperiam <br> exercitationem soluta temporibus quae, molestias officia suscipit. Error, iusto?<br>
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum repudiandae numquam odit tempore harum reprehenderit esse neque!<br> Amet provident similique dolorum esse. Sunt fugit eaque, saepe voluptatibus neque iusto asperiores! <br>
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum suscipit sapiente rem asperiores, molestias ab sunt mollitia accusamus magnam voluptatum dicta dolores quo alias nostrum praesentium beatae, ut molestiae. 
+			</p>
 		<hr>
 	</div>
 </body>
