altera index e estilização

--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="fundo-imagem">
-    
-    <div>
-        <img class="fotosBiblio" src="img/foto1.png" alt="isso é uma foto">
-    </div>
-    <div>
-        <img class="fotosBiblio" src="img/foto2.png" alt="">
+    <div class="principal">
+        <div class="barraDeNavegacao">
+            <a href="index.html">Home</a> |
+            <a href="Bibliografia.html">Bibliografia </a> |
+            <a href="Campanhas-Publicitarias.html">Campanhas Publicitarias </a> |
+            <a href="Contato.html">Contato</a>
+        </div>  
+        <div>
+            <img class="fotosBiblio" src="img/foto1.png" alt="isso é uma foto">
+        </div>
+        
+        <div>
+            <img class="fotosBiblio" src="img/foto2.png" alt="">
+        </div>
     </div>
 </body>
 </html>
