--- a/Campanhas-Publicitarias.html
+++ b/Campanhas-Publicitarias.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="fundo-imagem">
-    
+    <div class="principal">
+        <div>
+            <div class="barraDeNavegacao">
+                <a href="index.html">Home</a> |
+                <a href="Bibliografia.html">Bibliografia </a> |
+                <a href="Campanhas-Publicitarias.html">Campanhas Publicitarias </a> |
+                <a href="Contato.html">Contato</a>
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
