--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 <body>
 	<div class="principal">
 		<div class="fotoHome">
-			<figure>
-				<img src="img/capa.png" alt="Modelo Anna Bella">
-			</figure>
+			<img src="img/capa.png" alt="Modelo Anna Bella">
 		</div>
+		<div>
 			<div class="barraDeNavegacao">
-				<NAv>
-					<UL>
-					<li><a href="Bibliografia.html"></a>Bibliografia |</li>
-					<li><a href="Campanhas-Publicitarias.html"></a>Campanhas Publicitarias | </li>
-					<li><a href="Contato.html"></a>Contato | </li>
-					</UL>
-				</NAv>
+				<a href="index.html">Home</a> |
+				<a href="Bibliografia.html">Bibliografia </a> |
+				<a href="Campanhas-Publicitarias.html">Campanhas Publicitarias </a> |
+				<a href="Contato.html">Contato</a>
 			</div>
-		<hr>
+		</div>
+			<hr>
 		<div class="texto">
+			
+		<h1>Sobre Anna Bella</h1>	
 			<p">
 				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium laboriosam quis inventore omnis fugit est, modi asperiores delectus <br> porro. Officia tempore provident soluta quasi asperiores rem, ipsam repellat. Sed, maiores?
 				<br>
@@ -33,9 +32,9 @@
 				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum suscipit sapiente rem asperiores, molestias ab sunt mollitia accusamus magnam voluptatum dicta dolores quo alias nostrum praesentium beatae, ut molestiae. 
 			</p>
 		<hr>
+		<div>
+			<h4 class="centralizar"> Todos os direitos Reservados </h4>
+		</div>
 	</div>
 </body>
-<head>
-	Todos os direitos Reservados
-</head>
 </html>
