finalizando o projeto cria readme

--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Bibliografia</title>
+    <title>Anna Bella--Bibliografia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="fundo-imagem">
+    
+    <div class="fotoHome">
+        <img src="img/capa.png" alt="Modelo Anna Bella">
+    </div>
+   
     <div class="principal">
         <div class="barraDeNavegacao">
             <a href="index.html">Home</a> |
             <a href="Bibliografia.html">Bibliografia </a> |
             <a href="Campanhas-Publicitarias.html">Campanhas Publicitarias </a> |
             <a href="Contato.html">Contato</a>
-        </div>  
-        <div>
-            <img class="fotosBiblio" src="img/foto1.png" alt="isso é uma foto">
-        </div>
-        
-        <div>
-            <img class="fotosBiblio" src="img/foto2.png" alt="">
-        </div>
+        </div> 
+        <hr>
+        <div class="texto"> 
+            <h1>A História de Anna Bella</h1>	
+                <p">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium laboriosam quis inventore omnis fugit est, modi asperiores delectus <br> porro. Officia tempore provident soluta quasi asperiores rem, ipsam repellat. Sed, maiores?
+                    <br>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui voluptatem eligendi, ea debitis sed quis sint amet, quod facilis earum aperiam <br> exercitationem soluta temporibus quae, molestias officia suscipit. Error, iusto?<br>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum repudiandae numquam odit tempore harum reprehenderit esse neque!<br> Amet provident similique dolorum esse. Sunt fugit eaque, saepe voluptatibus neque iusto asperiores! <br>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum suscipit sapiente rem asperiores, molestias ab sunt mollitia accusamus magnam voluptatum dicta dolores quo alias nostrum praesentium beatae, ut molestiae. 
+                </p>
+        </div>    
+            <div>
+                <h4 id="rodape"> Todos os direitos Reservados </h4>
+            </div>
     </div>
 </body>
 </html>
