--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</p>
 		<hr>
 		<div>
-			<h4 class="centralizar"> Todos os direitos Reservados </h4>
+			<h4 id="rodape"> Todos os direitos Reservados </h4>
 		</div>
 	</div>
 </body>
