--- a/Campanhas-Publicitarias.html
+++ b/Campanhas-Publicitarias.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campanhas Publicitarias</title>
+    <title>Campanhas Publicitarias -- Anna Bella</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="fundo-imagem">
     <div class="principal">
+        <div class="fotoHome">
+            <img src="img/capa.png" alt="Modelo Anna Bella">
+        </div>
         <div>
             <div class="barraDeNavegacao">
                 <a href="index.html">Home</a> |
@@ -18,6 +21,24 @@
                 
             </div>
         </div>
+        <hr>
+		<div class="texto">	
+		<h1>Campanhas Publicitarias</h1>	
+			<p">
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium laboriosam quis inventore omnis fugit est, modi asperiores delectus exercitationem soluta temporibus quae,  Earum repudiandae numquam odit tempore harum reprehenderit esse neque!<br>
+                <img src="img/foto1.png " class="fotosBiblio" alt="">
+                <br>molestias officia suscipit. Error, iusto?
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit.porro. Officia tempore provident soluta quasi asperiores rem, ipsam repellat. Sed, maiores?<br>
+                <img src="img/foto2.png" class="fotosBiblio" alt="">
+				<br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui voluptatem eligendi, ea debitis sed quis sint amet, quod facilis earum aperiam Amet provident similique dolorum esse. Sunt fugit eaque, saepe voluptatibus neque iusto asperiores! <br> 
+                <img src="img/foto3.png" class="fotosBiblio" alt="">
+                <br>    
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum suscipit sapiente rem asperiores, molestias ab sunt mollitia accusamus magnam voluptatum dicta dolores quo alias nostrum praesentium beatae, ut molestiae. 
+			</p>
+		<hr>
+		<div>
+			<h4 id="rodape"> Todos os direitos Reservados </h4>
+		</div>
     </div>
 </body>
 </html>
